# drf-easy-crud

./: README.md  USER_GUIDE.md  pyproject.toml
.config/: pylintrc
drf_easy_crud/: __init__.py  const.py  crud_utils.py  filter_utils.py
